mobile almost done

--- a/colors.scss
+++ b/colors.scss
@@ -3,6 +3,7 @@
   --btn-dark: rgba(141, 118, 51, 255);
   --bg-text-img: rgba(206, 199, 181, 255);
   --color-text-img: #6d6d6d;
-  --bg-carousel: rgba(207, 187, 124, 255);
+  --bg-offer: #cfbb7c;
   --color-img-text: #8d7533;
+  --white: #ffffff;
 }
