improved typography & img

--- a/colors.scss
+++ b/colors.scss
@@ -5,5 +5,8 @@
   --color-text-img: #6d6d6d;
   --bg-offer: #cfbb7c;
   --color-img-text: #8d7533;
+  --color-dark: #6d6d6e;
+  --color-header: #8d8d8d;
+  --color-offer: #917738;
   --white: #ffffff;
 }
