--- a/style.scss
+++ b/style.scss
@@ -19,22 +19,43 @@ body {
           position: initial;
         }
       }
-      &__bottom {
-        gap: 2rem;
-        align-items: center;
-        .d-flex {
-          gap: 1rem;
+      &__btn {
+        gap: 1rem;
+        a {
+          padding: 0;
+          background: linear-gradient(60deg, var(--btn-light), var(--btn-dark));
+          border: none;
+          border-radius: 0;
+          color: var(--white);
+
+          &:first-child {
+            width: 17rem;
+            height: 3.5rem;
+            padding: 1rem 3rem;
+            color: var(--white);
+            text-transform: uppercase;
+            text-align: center;
+            letter-spacing: 0.2rem;
+          }
+          &:nth-child(2),
+          &:nth-child(3) {
+            height: 3.5rem;
+            width: 3rem;
+            padding: 1rem;
+          }
         }
       }
       &__address,
       &__email {
         margin: 0;
+        color: var(--color-header);
       }
     }
   }
 
   .text-img {
     background-color: var(--bg-text-img);
+    color: var(--color-dark);
     .text {
       &__h1 {
         font-size: 2rem;
@@ -48,16 +69,18 @@ body {
       padding: 1rem;
       position: relative;
       min-width: 53%;
+      margin-left: 1rem;
     }
 
     &__img {
       position: relative;
-      right: 6.5rem;
-      width: 65%;
+      right: 8.5rem;
+      width: 80%;
     }
   }
 
   .img-text {
+    color: var(--color-offer);
     .d-flex {
       padding: 1rem;
       .text {
@@ -73,6 +96,7 @@ body {
     background-color: var(--bg-offer);
     text-align: center;
     color: var(--white);
+    padding-top: 2rem;
     .subtitle {
       span {
         font-weight: 600;
