--- a/colors.css
+++ b/colors.css
@@ -9,5 +9,6 @@
   --color-header: #8d8d8d;
   --color-offer: #917738;
   --white: #ffffff;
+  --black: #000000;
 }
 /*# sourceMappingURL=colors.css.map */
