--- a/style.css
+++ b/style.css
@@ -120,8 +120,8 @@ body .container__slide {
 }
 
 body .splide img {
-  width: 10rem;
-  height: 10rem;
+  width: 30vw;
+  height: auto;
   -webkit-box-shadow: 0px 8px 20px -10px var(--black);
           box-shadow: 0px 8px 20px -10px var(--black);
 }
@@ -131,6 +131,7 @@ body .splide__arrow svg {
 }
 
 body .splide__slide p {
+  margin-top: 2rem;
   text-transform: uppercase;
 }
 
