--- a/style.scss
+++ b/style.scss
@@ -111,10 +111,11 @@ body {
   }
   .splide {
     img {
-      width: 10rem;
-      height: 10rem;
+      width: 30vw;
+      height: auto;
       box-shadow: 0px 8px 20px -10px var(--black);
     }
+
     &__arrow {
       svg {
         fill: var(--black);
@@ -122,6 +123,7 @@ body {
     }
     &__slide {
       p {
+        margin-top: 2rem;
         text-transform: uppercase;
       }
     }
