--- a/style.css
+++ b/style.css
@@ -6,11 +6,21 @@
   font-size: 10px;
 }
 
+h1,
+h2 {
+  text-transform: uppercase;
+  font-weight: 400;
+}
+
 body {
   font-family: "Poppins";
 }
 
 body header {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -115,7 +125,7 @@ body .offer .subtitle span {
   font-weight: 600;
 }
 
-body .container__slide {
+body .box__slide {
   padding: 0;
 }
 
@@ -126,12 +136,16 @@ body .splide img {
           box-shadow: 0px 8px 20px -10px var(--black);
 }
 
+body .splide__list {
+  text-align: left;
+}
+
 body .splide__arrow svg {
   fill: var(--black);
 }
 
 body .splide__slide p {
-  margin-top: 2rem;
+  margin: 1rem 0 0 0.3rem;
   text-transform: uppercase;
 }
 
@@ -139,13 +153,48 @@ body .splide__track {
   background: var(--bg-offer);
 }
 
-h1,
-h2 {
-  text-transform: uppercase;
-  font-weight: 400;
-}
-
 .fa-sharp {
   margin-right: 1rem;
+}
+
+@media (min-width: 768px) {
+  body header {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  body .text-img__flex {
+    min-width: 50%;
+    padding: 5rem 1rem 1rem 4rem;
+  }
+  body .text-img .text__h1 {
+    font-size: 3rem;
+  }
+  body .text-img .text__p {
+    font-size: 2rem;
+  }
+  body .text-img img {
+    right: 4rem;
+  }
+  body .img-text .flex-column {
+    margin-top: 2rem;
+  }
+  body .img-text .text__h1 {
+    font-size: 3rem;
+  }
+  body .img-text .text__p {
+    font-size: 2rem;
+    padding: 2rem;
+  }
+  body .offer .box,
+  body .offer .subtitle,
+  body .offer span,
+  body .offer p {
+    font-size: 2rem;
+  }
 }
 /*# sourceMappingURL=style.css.map */
