--- a/style.css
+++ b/style.css
@@ -100,6 +100,10 @@ body .text-img__img {
 
 body .img-text {
   color: var(--color-offer);
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 body .img-text .d-flex {
@@ -195,6 +199,112 @@ body .splide__track {
   body .offer span,
   body .offer p {
     font-size: 2rem;
+  }
+}
+
+@media (min-width: 992px) {
+  body header {
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+  body header p {
+    font-size: 1.4rem;
+  }
+  body header .header__link .header__img {
+    width: 30rem;
+  }
+  body .text-img {
+    padding-top: 4rem;
+  }
+  body .text-img__flex {
+    padding: 8rem 1rem 1rem 15rem;
+  }
+  body .text-img__flex .text__h1 {
+    font-size: 4rem;
+  }
+  body .text-img__flex .text__p {
+    font-size: 2.5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  body header .header__link .header__img {
+    width: 35rem;
+  }
+  body .text-img__flex .text__h1 {
+    font-size: 4rem;
+  }
+  body .text-img__flex .text__p {
+    font-size: 2.5rem;
+  }
+  body .img-text {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    padding: 5rem;
+    gap: 8rem;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  body .img-text img {
+    height: 100%;
+    width: 50%;
+  }
+  body .img-text .d-flex .text__h1 {
+    max-width: 55%;
+  }
+  body .img-text .d-flex .text__h1, body .img-text .d-flex .text__p {
+    text-align: left;
+    padding: 2rem;
+  }
+  body .img-text .d-flex .text__p {
+    font-size: 1.6rem;
+  }
+  body .offer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 5rem;
+    gap: 2rem;
+  }
+  body .offer .title {
+    font-size: 4.8rem;
+    text-align: left;
+  }
+  body .offer .d-flex .container {
+    width: 30%;
+    text-align: left;
+    margin-top: 2rem;
+  }
+  body .offer .d-flex .container .subtitle {
+    font-size: 2.4rem;
+    max-width: 27rem;
+  }
+  body .offer .d-flex .container p {
+    font-size: 1.4rem;
+    max-width: 28rem;
+    line-height: 2.4rem;
+  }
+  body .offer .d-flex .box {
+    width: 70%;
+  }
+  body .offer .splide img {
+    width: auto;
+  }
+  body .offer .splide__arrow--prev {
+    left: -3rem;
+    top: 13rem;
+  }
+  body .offer .splide__arrow--next {
+    right: -3rem;
+    top: 13rem;
   }
 }
 /*# sourceMappingURL=style.css.map */
