--- a/style.scss
+++ b/style.scss
@@ -88,6 +88,7 @@ body {
 
   .img-text {
     color: var(--color-offer);
+    flex-direction: column;
     .d-flex {
       padding: 1rem;
       .text {
@@ -190,6 +191,137 @@ body {
       span,
       p {
         font-size: 2rem;
+      }
+    }
+  }
+}
+
+@media (min-width: 992px) {
+  body {
+    header {
+      justify-content: space-evenly;
+      p {
+        font-size: 1.4rem;
+      }
+      .header {
+        &__link {
+          .header {
+            &__img {
+              width: 30rem;
+            }
+          }
+        }
+      }
+    }
+    .text-img {
+      padding-top: 4rem;
+      &__flex {
+        padding: 8rem 1rem 1rem 15rem;
+        .text {
+          &__h1 {
+            font-size: 4rem;
+          }
+          &__p {
+            font-size: 2.5rem;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: 1200px) {
+  body {
+    header {
+      .header {
+        &__link {
+          .header {
+            &__img {
+              width: 35rem;
+            }
+          }
+        }
+      }
+    }
+    .text-img {
+      &__flex {
+        .text {
+          &__h1 {
+            font-size: 4rem;
+          }
+          &__p {
+            font-size: 2.5rem;
+          }
+        }
+      }
+    }
+    .img-text {
+      flex-direction: row;
+      padding: 5rem;
+      gap: 8rem;
+      align-items: center;
+      img {
+        height: 100%;
+        width: 50%;
+      }
+      .d-flex {
+        .text {
+          &__h1 {
+            max-width: 55%;
+          }
+          &__h1,
+          &__p {
+            text-align: left;
+            padding: 2rem;
+          }
+          &__p {
+            font-size: 1.6rem;
+          }
+        }
+      }
+    }
+    .offer {
+      display: flex;
+      flex-direction: column;
+      padding: 5rem;
+      gap: 2rem;
+      .title {
+        font-size: 4.8rem;
+        text-align: left;
+      }
+      .d-flex {
+        .container {
+          width: 30%;
+          text-align: left;
+          margin-top: 2rem;
+          .subtitle {
+            font-size: 2.4rem;
+            max-width: 27rem;
+          }
+          p {
+            font-size: 1.4rem;
+            max-width: 28rem;
+            line-height: 2.4rem;
+          }
+        }
+        .box {
+          width: 70%;
+        }
+      }
+      .splide {
+        img {
+          width: auto;
+        }
+        &__arrow {
+          &--prev {
+            left: -3rem;
+            top: 13rem;
+          }
+          &--next {
+            right: -3rem;
+            top: 13rem;
+          }
+        }
       }
     }
   }
