--- a/colors.scss
+++ b/colors.scss
@@ -2,7 +2,7 @@
   --btn-light: rgba(207, 187, 123, 255);
   --btn-dark: rgba(141, 118, 51, 255);
   --bg-text-img: rgba(206, 199, 181, 255);
-  --color-text-img: #6d6d6d;
+  --color-gray: #6d6d6d;
   --bg-offer: #cfbb7c;
   --color-img-text: #8d7533;
   --color-dark: #6d6d6e;
@@ -10,4 +10,6 @@
   --color-offer: #917738;
   --white: #ffffff;
   --black: #000000;
+  --input-bg: #f1f1f1;
+  --agreement-color: #9d9d9d;
 }
