--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body header .header__btn {
 
 body header .header__btn a {
   padding: 0;
-  background: linear-gradient(60deg, var(--btn-light), var(--btn-dark));
+  background: linear-gradient(-50deg, #8d7533 0%, #cfbb7b 100%);
   border: none;
   border-radius: 0;
   color: var(--white);
@@ -98,6 +98,74 @@ body .text-img__img {
   width: 50%;
 }
 
+body .form {
+  width: auto;
+  min-height: 32.9rem;
+  -webkit-box-shadow: 0px 11px 17.5px rgba(161, 161, 161, 0.6);
+          box-shadow: 0px 11px 17.5px rgba(161, 161, 161, 0.6);
+  background: var(--white);
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 2rem 0;
+}
+
+body .form .title {
+  letter-spacing: 0.3rem;
+  color: var(--color-offer);
+}
+
+body .form p {
+  font-size: 1.4rem;
+}
+
+body .form .inputs {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 1rem;
+}
+
+body .form .inputs input {
+  border: none;
+  padding: 1rem 1.5rem;
+  font-size: 1.5rem;
+  background: var(--input-bg);
+}
+
+body .form .agreement {
+  gap: 1rem;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+  padding: 1rem;
+}
+
+body .form .agreement input {
+  position: relative;
+  top: 0.4rem;
+}
+
+body .form .agreement h3 {
+  margin: 0;
+  font-size: 1.25rem;
+  color: var(--agreement-color);
+}
+
+body .form a {
+  border: none;
+  border-radius: 0;
+  background-image: linear-gradient(-50deg, #8d7533 0%, #cfbb7b 100%);
+  font-size: 1.4rem;
+  letter-spacing: 0.1rem;
+  color: var(--white);
+  padding: 1rem;
+  text-transform: uppercase;
+  width: 18rem;
+  height: 4rem;
+}
+
 body .img-text {
   color: var(--color-offer);
   -webkit-box-orient: vertical;
@@ -123,6 +191,13 @@ body .offer {
   text-align: center;
   color: var(--white);
   padding-top: 2rem;
+}
+
+body .offer .d-flex {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 body .offer .subtitle span {
@@ -173,7 +248,7 @@ body .splide__track {
   }
   body .text-img__flex {
     min-width: 50%;
-    padding: 5rem 1rem 1rem 4rem;
+    padding: 7rem 1rem 1rem 7rem;
   }
   body .text-img .text__h1 {
     font-size: 3rem;
@@ -226,6 +301,19 @@ body .splide__track {
   body .text-img__flex .text__p {
     font-size: 2.5rem;
   }
+  body .form {
+    gap: 1rem;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    max-height: 32.9rem;
+  }
+  body .form .inputs {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
 }
 
 @media (min-width: 1200px) {
@@ -238,12 +326,37 @@ body .splide__track {
   body .text-img__flex .text__p {
     font-size: 2.5rem;
   }
+  body .form {
+    position: relative;
+    margin: -20% auto 0;
+    width: 77rem;
+  }
+  body .form .title {
+    font-size: 3rem;
+  }
+  body .form p {
+    font-size: 1.8rem;
+  }
+  body .form .inputs {
+    gap: 3rem;
+  }
+  body .form .inputs input {
+    font-size: 1.6rem;
+  }
+  body .form .agreement {
+    padding: 1rem 6rem;
+  }
+  body .form .btn {
+    padding: 1.5rem;
+    width: 19rem;
+    height: 5rem;
+  }
   body .img-text {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
-    padding: 5rem;
+    padding: 5rem 5rem 5rem;
     gap: 8rem;
     -webkit-box-align: center;
         -ms-flex-align: center;
@@ -251,6 +364,9 @@ body .splide__track {
   }
   body .img-text img {
     height: 100%;
+    width: 50%;
+  }
+  body .img-text .d-flex {
     width: 50%;
   }
   body .img-text .d-flex .text__h1 {
@@ -277,6 +393,12 @@ body .splide__track {
   body .offer .title {
     font-size: 4.8rem;
     text-align: left;
+  }
+  body .offer .d-flex {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
   }
   body .offer .d-flex .container {
     width: 30%;
