--- a/style.scss
+++ b/style.scss
@@ -30,7 +30,7 @@ body {
         gap: 1rem;
         a {
           padding: 0;
-          background: linear-gradient(60deg, var(--btn-light), var(--btn-dark));
+          background: linear-gradient(-50deg, #8d7533 0%, #cfbb7b 100%);
           border: none;
           border-radius: 0;
           color: var(--white);
@@ -86,6 +86,58 @@ body {
     }
   }
 
+  .form {
+    width: auto;
+    min-height: 32.9rem;
+    box-shadow: 0px 11px 17.5px rgba(161, 161, 161, 0.6);
+    background: var(--white);
+    align-items: center;
+    padding: 2rem 0;
+    .title {
+      letter-spacing: 0.3rem;
+      color: var(--color-offer);
+    }
+    p {
+      font-size: 1.4rem;
+    }
+    .inputs {
+      flex-direction: column;
+      gap: 1rem;
+      input {
+        border: none;
+        padding: 1rem 1.5rem;
+        font-size: 1.5rem;
+        background: var(--input-bg);
+      }
+    }
+    .agreement {
+      gap: 1rem;
+      align-items: baseline;
+      padding: 1rem;
+      input {
+        position: relative;
+        top: 0.4rem;
+      }
+      h3 {
+        margin: 0;
+        font-size: 1.25rem;
+        color: var(--agreement-color);
+      }
+    }
+    a {
+      border: none;
+      border-radius: 0;
+      background-image: linear-gradient(-50deg, #8d7533 0%, #cfbb7b 100%);
+      font-size: 1.4rem;
+      letter-spacing: 0.1rem;
+      color: var(--white);
+      padding: 1rem;
+      text-transform: uppercase;
+      width: 18rem;
+      height: 4rem;
+    }
+  }
+
   .img-text {
     color: var(--color-offer);
     flex-direction: column;
@@ -108,6 +160,9 @@ body {
     text-align: center;
     color: var(--white);
     padding-top: 2rem;
+    .d-flex {
+      flex-direction: column;
+    }
     .subtitle {
       span {
         font-weight: 600;
@@ -157,7 +212,7 @@ body {
     .text-img {
       &__flex {
         min-width: 50%;
-        padding: 5rem 1rem 1rem 4rem;
+        padding: 7rem 1rem 1rem 7rem;
       }
       .text {
         &__h1 {
@@ -227,6 +282,14 @@ body {
         }
       }
     }
+    .form {
+      gap: 1rem;
+      justify-content: center;
+      max-height: 32.9rem;
+      .inputs {
+        flex-direction: row;
+      }
+    }
   }
 }
 
@@ -255,9 +318,36 @@ body {
         }
       }
     }
+
+    .form {
+      position: relative;
+      margin: -20% auto 0;
+      width: 77rem;
+      .title {
+        font-size: 3rem;
+      }
+      p {
+        font-size: 1.8rem;
+      }
+      .inputs {
+        gap: 3rem;
+        input {
+          font-size: 1.6rem;
+        }
+      }
+      .agreement {
+        padding: 1rem 6rem;
+      }
+      .btn {
+        padding: 1.5rem;
+        width: 19rem;
+        height: 5rem;
+      }
+    }
+
     .img-text {
       flex-direction: row;
-      padding: 5rem;
+      padding: 5rem 5rem 5rem;
       gap: 8rem;
       align-items: center;
       img {
@@ -265,6 +355,7 @@ body {
         width: 50%;
       }
       .d-flex {
+        width: 50%;
         .text {
           &__h1 {
             max-width: 55%;
@@ -290,6 +381,7 @@ body {
         text-align: left;
       }
       .d-flex {
+        flex-direction: row;
         .container {
           width: 30%;
           text-align: left;
