--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ body .form .inputs {
 
 body .form .inputs input {
   border: none;
-  padding: 1rem 1.5rem;
+  padding: 1rem 8rem 1rem 1.5rem;
   font-size: 1.5rem;
   background: var(--input-bg);
 }
@@ -140,11 +140,14 @@ body .form .agreement {
       -ms-flex-align: baseline;
           align-items: baseline;
   padding: 1rem;
+  width: 82%;
 }
 
 body .form .agreement input {
   position: relative;
-  top: 0.4rem;
+  top: 0.8rem;
+  height: 2rem;
+  scale: 2;
 }
 
 body .form .agreement h3 {
@@ -370,6 +373,7 @@ body .text-line p {
   }
   body .form .inputs input {
     font-size: 1.6rem;
+    padding: 1rem 1.5rem;
   }
   body .form .agreement {
     padding: 1rem 6rem;
