--- a/style.scss
+++ b/style.scss
@@ -105,7 +105,7 @@ body {
       gap: 1rem;
       input {
         border: none;
-        padding: 1rem 1.5rem;
+        padding: 1rem 8rem 1rem 1.5rem;
         font-size: 1.5rem;
         background: var(--input-bg);
       }
@@ -114,9 +114,12 @@ body {
       gap: 1rem;
       align-items: baseline;
       padding: 1rem;
+      width: 82%;
       input {
         position: relative;
-        top: 0.4rem;
+        top: 0.8rem;
+        height: 2rem;
+        scale: 2;
       }
       h3 {
         margin: 0;
@@ -355,6 +358,7 @@ body {
         gap: 3rem;
         input {
           font-size: 1.6rem;
+          padding: 1rem 1.5rem;
         }
       }
       .agreement {
