--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ body .form .agreement input {
   position: relative;
   top: 0.8rem;
   height: 2rem;
-  scale: 2;
+  scale: 1.25;
 }
 
 body .form .agreement h3 {
@@ -348,13 +348,13 @@ body .text-line p {
 }
 
 @media (min-width: 1200px) {
-  body header .header__link .header__img {
+  body .header__img {
     width: 35rem;
   }
-  body .text-img__flex .text__h1 {
+  body .text__h1 {
     font-size: 4rem;
   }
-  body .text-img__flex .text__p {
+  body .text__p {
     font-size: 2.5rem;
   }
   body .form {
